-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 21, 23
-
Component/s: hotspot
-
b03
-
generic
-
linux
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8338114 | 23.0.2 | Matthias Baesken | P4 | Resolved | Fixed | b01 |
| JDK-8345137 | 21.0.7-oracle | Calvin Cheung | P4 | Resolved | Fixed | b01 |
| JDK-8338118 | 21.0.5 | Matthias Baesken | P4 | Resolved | Fixed | b03 |
jdk/src/hotspot/share/cds/cppVtables.cpp:81:55: runtime error: index 14 out of bounds for type 'long int [1]'
#0 0x1519b8aeff95 in CppVtableCloner<ConstantPool>::allocate_and_initialize(char const*) (/support/interim-image/lib/server/libjvm.so+0x5803f95)
#1 0x1519b8aeb109 in CppVtables::dumptime_init(ArchiveBuilder*) (/support/interim-image/lib/server/libjvm.so+0x57ff109)
#2 0x1519ba16bc6b in VM_PopulateDumpSharedSpace::doit() (/support/interim-image/lib/server/libjvm.so+0x6e7fc6b)
#3 0x1519bafdba4d in VM_Operation::evaluate() (/support/interim-image/lib/server/libjvm.so+0x7cefa4d)
#4 0x1519bafea3b1 in VMThread::evaluate_operation(VM_Operation*) (/support/interim-image/lib/server/libjvm.so+0x7cfe3b1)
#5 0x1519bafec3bf in VMThread::inner_execute(VM_Operation*) (/support/interim-image/lib/server/libjvm.so+0x7d003bf)
#6 0x1519bafecf29 in VMThread::loop() (/support/interim-image/lib/server/libjvm.so+0x7d00f29)
#7 0x1519bafed017 in VMThread::run() (/support/interim-image/lib/server/libjvm.so+0x7d01017)
#8 0x1519bad7d03a in Thread::call_run() (/support/interim-image/lib/server/libjvm.so+0x7a9103a)
#9 0x1519ba3c6421 in thread_native_entry(Thread*) (/support/interim-image/lib/server/libjvm.so+0x70da421)
#10 0x1519c00ad6e9 in start_thread (/lib64/libpthread.so.0+0xa6e9) (BuildId: 2f8d3c2d0f4d7888c2598d2ff6356537f5708a73)
#11 0x1519bf71550e in clone (/lib64/libc.so.6+0x11850e) (BuildId: f732026552f6adff988b338e92d466bc81a01c37)
- backported by
-
JDK-8338114 ubsan: cppVtables.cpp:81:55: runtime error: index 14 out of bounds for type 'long int [1]'
-
- Resolved
-
-
JDK-8338118 ubsan: cppVtables.cpp:81:55: runtime error: index 14 out of bounds for type 'long int [1]'
-
- Resolved
-
-
JDK-8345137 ubsan: cppVtables.cpp:81:55: runtime error: index 14 out of bounds for type 'long int [1]'
-
- Resolved
-
- links to
-
Commit
openjdk/jdk/0199fee4
-
Commit(master)
openjdk/jdk21u-dev/953846d9
-
Commit(master)
openjdk/jdk23u/6534917b
-
Review
openjdk/jdk/19623
-
Review(master)
openjdk/jdk21u-dev/898
-
Review(master)
openjdk/jdk23u/58